--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="col" style="margin-top:3%; text-align:left;">
 
                     <p><strong style="color:#990000";>Prospective Students and Interns</strong>.
-                        I am <strong>peacefully</strong> looking for unpaid interns (it is because USC does not allow remote paid interns) and prospective Ph.D. students (apply by Dec 23 for Fall 24 admission; full financial support as any other places).
+                        I am <strong>peacefully</strong> looking for.
                         In short, you are expected to have <em><strong>a relevant paper</strong></em> to my research topics and <em>strong strong programming skills</em> for open-source ML and/or systems.
                         See <a href="#join-asap"> instructions (via email only; not WeChat) before reaching out</a>.</p>
 
@@ -360,7 +360,7 @@
         <h2 id="join-asap">Join <u>A</u>utomation, <u>S</u>ystem, and <u>AP</u>plication (ASAP) Lab</h2>
         <p><strong style="color:#990000;">Openings</strong>.
             I am <strong>peacefully</strong> looking for interns (from now) and Ph.D. student (from Fall 24).
-            I also wrote an article about these opportunities in Chinese: <a href="https://zhuanlan.zhihu.com/p/635612451"> 加入USC ASAP Lab来和我一起策"马"扬鞭！</a> </p>
+            I also wrote an article about these opportunities in Chinese: <a href="https://zhuanlan.zhihu.com/p/635612451"> 加入</a> </p>
 
         <p><strong>The Benefit of Initial Research Collaboration/Internship</strong>. Participating in a project together provides a beneficial environment for us to assess our compatibility before committing to a long-term advisee/advisor relationship.
         And the cherry on top: you might obtain a strong reference letter and secure better offers than that of USC :-) </p>
